--- a/code/frontend/src/index.html
+++ b/code/frontend/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My app</title>
+    <title>IPBF - Dashboard Manager</title>
     <meta charset="UTF-8" />
     <base href="/">
   </head>
