--- a/code/frontend/src/index.html
+++ b/code/frontend/src/index.html
@@ -4,6 +4,7 @@
     <title>IPBF - Dashboard Manager</title>
     <meta charset="UTF-8" />
     <base href="/">
+    <link rel="icon" type="image/png" sizes="32x32" href="#">
   </head>
   <body>
     <app-root>Loading...</app-root>
