--- a/code/frontend/src/index.html
+++ b/code/frontend/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>IPBF - Dashboard Manager</title>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="/">
     <link rel="icon" type="image/png" sizes="32x32" href="#">
   </head>
